--- a/Investments-AUTO.css
+++ b/Investments-AUTO.css
@@ -36,7 +36,7 @@ body {
 .inner-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3vh minmax(225px, 10vh) 2vh;
+    grid-template-rows: 3vh minmax(225px, 10vh) 1vh 1vh;
     justify-content: center;
     border-color: blue;
     border-style: solid;
@@ -48,7 +48,7 @@ body {
 .inner-grid-defunct {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3vh minmax(200px, 15vh) 2vh;
+    grid-template-rows: 3vh minmax(225px, 10vh) 1vh 1vh;
     justify-content: center;
     border-color: blue;
     border-style: solid;
@@ -60,7 +60,7 @@ body {
 .inner-grid-cancelled {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3vh minmax(200px, 15vh) 2vh;
+    grid-template-rows: 3vh minmax(225px, 10vh) 1vh 1vh;
     justify-content: center;
     border-color: blue;
     border-style: solid;
@@ -73,7 +73,7 @@ body {
 .inner-grid-exited {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3vh minmax(200px, 15vh) 2vh;
+    grid-template-rows: 3vh minmax(225px, 10vh) 1vh 1vh;
     justify-content: center;
     border-color: blue;
     border-style: solid;
@@ -135,6 +135,13 @@ body {
     grid-area: 3 / 2;
     font-size: min(2.5vw,10px);
     text-align: right;
+    text-size-adjust: auto;
+}
+
+.inner-grid-status {
+    grid-area: 4 / 1 / span 1 / span 2;
+    font-size: min(2.5vw,10px);
+    text-align: center;
     text-size-adjust: auto;
 }
 
